fixed stretching maintenance

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -95,12 +95,12 @@ p {
   align-items: center;
   /* padding-left: 5em; */
   /* padding-right: 5em; */
-  padding-left: 4vw;
-  padding-right: 4vw;
   /* border-radius: 37px; */
   border-radius: 3vmin;
   padding-top: 2vmin;
   padding-bottom: 2vmin;
+  padding-left: 6.5vmin;
+  padding-right: 6.5vmin;
 }
 
 @media only screen and (max-width: 1570px) {
